--- a/_notebooks/2022-11-09-unit2-hw.ipynb
+++ b/_notebooks/2022-11-09-unit2-hw.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 2 Homework\n",
-    "> Using Objects\n",
+    "# Unit 2 Using Objects\n",
+    "> Objects\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
@@ -18,14 +18,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Concatenation\n",
+    "- Can use to add 2 strings together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is an example of concatenation\n"
+     ]
+    }
+   ],
+   "source": [
+    "String concat1 = \"this is\";\n",
+    "String concat2 = \"an example of concatenation\";\n",
+    "System.out.println(concat1 + \" \" + concat2); //add both strings together to create a new sentence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Math class\n",
+    "- Useful for various mathematical operations like rounding and random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "7\n",
+      "4\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.lang.Math;\n",
+    "\n",
+    "for (int i = 0; i < 5; i++) {\n",
+    "    int mathRand = (int)(Math.random() * 11); //randomly generate 10 numbers from 0-10\n",
+    "    System.out.println(mathRand);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit 2 Homework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Goblin Fight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elon Musk missed!\n",
+      "Jeff Bezos HP: 12\n",
+      "Elon Musk takes 2 damage\n",
+      "Elon Musk HP: 2\n",
+      "Jeff Bezos takes 1 damage\n",
+      "Jeff Bezos HP: 12\n",
+      "Elon Musk takes 2 damage\n",
+      "Elon Musk HP: -1\n",
+      "Elon Musk has perished\n"
+     ]
+    }
+   ],
    "source": [
     "import java.util.*;\n",
     "\n",
@@ -147,8 +243,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
