--- a/_notebooks/2022-11-09-unit3-hw.ipynb
+++ b/_notebooks/2022-11-09-unit3-hw.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 3 Homework\n",
-    "> Boolean Expressions and If Statements\n",
+    "# Unit 3 Boolean Expressions and If Statements\n",
+    "> Control Structures\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
@@ -18,13 +18,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Compound Boolean Expression\n",
+    "- Grouping boolean expressions to ensure that a condition is met in multiple occasions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one statement is true, one statement is false\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean a = true;\n",
+    "boolean b = false;\n",
+    "\n",
+    "if (a == true || b == true) {\n",
+    "    if (a == true && b == true) {\n",
+    "        System.out.println(\"both statements are true\");\n",
+    "    }\n",
+    "    else {\n",
+    "        System.out.println(\"one statement is true, one statement is false\");\n",
+    "    }\n",
+    "}\n",
+    "else {\n",
+    "    System.out.println(\"both statements are false\");\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Truth Tables\n",
+    "- Used to see values of boolean expressions <- good visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 \n",
+      "0 0 1 \n",
+      "0 1 0 \n",
+      "0 1 1 \n",
+      "1 0 0 \n",
+      "1 0 1 \n",
+      "1 1 0 \n",
+      "1 1 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "public class TruthTable {\n",
+    "    private static void printTruthTable(int n) {\n",
+    "        int rows = (int) Math.pow(2,n);\n",
+    "\n",
+    "        for (int i=0; i<rows; i++) {\n",
+    "            for (int j=n-1; j>=0; j--) {\n",
+    "                System.out.print((i/(int) Math.pow(2, j))%2 + \" \");\n",
+    "            }\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        printTruthTable(3); \n",
+    "    }\n",
+    "}\n",
+    "TruthTable.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# De'Morgans Law\n",
+    "- Used to simplify boolean expressions\n",
+    "- You distribute symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true true true\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean a = true;\n",
+    "boolean b = false;\n",
+    "\n",
+    "boolean result = !(a && b) || (!(a || b));\n",
+    "boolean result2 = !a || !b && !(!a && !b); //De'Morgans once\n",
+    "boolean result3 = !a || !b && a || b; //De'Morgans twice\n",
+    "\n",
+    "System.out.println(result + \" \" + result2 + \" \" + result3);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit 3 Homework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2009 FRQ 3b"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int getChargeStartTime (int chargeTime) {\n",
@@ -50,7 +191,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public boolean isStrictlyIncreasing () {\n",
@@ -74,7 +219,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public boolean isBalanced(ArrayList<String> delimiters) {\n",
@@ -99,8 +248,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
