--- a/_notebooks/2022-11-09-unit6-hw.ipynb
+++ b/_notebooks/2022-11-09-unit6-hw.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 6 Homework\n",
-    "> Array Notes\n",
+    "# Unit 6 Arrays\n",
+    "> Arraying\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
@@ -15,13 +15,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes\n",
+    "- a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -96,7 +100,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
