--- a/_notebooks/2022-12-09-unit8-hw.ipynb
+++ b/_notebooks/2022-12-09-unit8-hw.ipynb
@@ -20,6 +20,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Notes\n",
+    "- 2D arrays are essentially arrays of arrays, which can let us use them to create data structures like matrices, etc\n",
+    "- 2D arrays can be initialized in 2 ways: \n",
+    "int[][] numbers1 = {{1,2,3,4},{5,6,7,8},{9,10,11,12},{13,14,15,16}};\n",
+    "int[][] numbers2 = new int[4][3]; \n",
+    "- To iterate through a 2D array, you have to use a for loop that first iterates through the rows then moves on to the next column and keeps iterating through the rows and so on until it's over\n",
+    "- Nested for loops are needed to iterate through a 2D array since it has columns and rows\n",
+    "- This is how you would iterate backwards through a 2D array: \n",
+    "    for(int i = 0;i<array.length;i++){\n",
+    "    for(int j = array[i].length-1; j >= 0;j--) {\n",
+    "        {{ Statement here }}\n",
+    "    }\n",
+    "- Important to note: [1][2] is the second row, third column (indexing)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create a class for 2D array learning."
    ]
   },
@@ -147,6 +167,128 @@
     "    }\n",
     "}\n",
     "Array2D.tester(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extra Credit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A story of a Monkey and Cthulhus\n",
+      "ʕง ͠° ͟ل͜ ͡°)ʔ  \n",
+      "  \\_⏄_/   \n",
+      "  --0--    \n",
+      "  ⎛   ⎞    \n",
+      "⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⡀⠀⠀⠀⠀⠀⠀⢎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ʕง ͠° ͟ل͜ ͡°)ʔ \n",
+      "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⢱⠀⠀⢀⣤⡀⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  \\_⏄_/  \n",
+      "⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⠻⠉⣧⣿⣿⣿⠀⠀⢸⠇⠀⠐⠉⡆⠀⠀⠀⠀⠀⠀  --0--   \n",
+      "⠀⠀⠀⠀⢀⠔⠒⢦⠀⢻⡄⠀⢿⣻⣿⡿⢀⣴⣋⣄⣄⣌⣠⠃⠀⠀⠀⠀⠀⠀  ⎛   ⎞   \n",
+      "⠀⠀⠀⠀⠈⠀⢀⡞⠀⠈⠛⣷⣾⣿⣿⣿⣿⣿⣯⣥⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀         \n",
+      "⠀⠀⠀⠀⠀⠀⠈⠷⣦⣴⡾⢿⣿⡿⢿⣿⣋⣽⠶⢦⠙⢷⡀⠀⠀⠀⠀⠀⠀⠀         \n",
+      "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⡏⢀⡆⠈⠉⠁⡄⠈⡇⠘⢇⠀⢈⡆⠀⠀⠀⠀         \n",
+      "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡯⠀⠸⠁⠀⠀⠸⣧⡀⡇⠀⠈⠉⠉⠀⠀⠀⠀⠀         \n",
+      "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣇⡴⠁⠀⠀⠀⠀⠙⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀          \n",
+      "0000000000000000000000000000000000\n",
+      "             THE END              \n"
+     ]
+    }
+   ],
+   "source": [
+    "class MonkeyLoop {\n",
+    "    String [][] monkeys;\n",
+    "    String [][] cthulhus;\n",
+    "\n",
+    "\n",
+    "    public MonkeyLoop() {\n",
+    "        monkeys = new String[][]{\n",
+    "\n",
+    "                {\n",
+    "                        \"ʕง ͠° ͟ل͜ ͡°)ʔ \",      //[0][0] eyes\n",
+    "                },\n",
+    "\n",
+    "                {\n",
+    "                        \"  \\\\_⏄_/  \",      //[1][0] chin\n",
+    "\n",
+    "                },\n",
+    "\n",
+    "                {\n",
+    "                        \"  --0--   \",       //[2][0] body\n",
+    "\n",
+    "                },\n",
+    "\n",
+    "                {\n",
+    "                        \"  ⎛   ⎞   \"        //[3][0] legs\n",
+    "                },\n",
+    "\n",
+    "\n",
+    "        };\n",
+    "\n",
+    "        cthulhus = new String[][]{\n",
+    "            {\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⡀⠀⠀⠀⠀⠀⠀⢎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ʕง ͠° ͟ل͜ ͡°)ʔ \",\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⢱⠀⠀⢀⣤⡀⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  \\\\_⏄_/  \",\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⠻⠉⣧⣿⣿⣿⠀⠀⢸⠇⠀⠐⠉⡆⠀⠀⠀⠀⠀⠀  --0--   \",\n",
+    "                    \"⠀⠀⠀⠀⢀⠔⠒⢦⠀⢻⡄⠀⢿⣻⣿⡿⢀⣴⣋⣄⣄⣌⣠⠃⠀⠀⠀⠀⠀⠀  ⎛   ⎞   \",\n",
+    "                    \"⠀⠀⠀⠀⠈⠀⢀⡞⠀⠈⠛⣷⣾⣿⣿⣿⣿⣿⣯⣥⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀         \",\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠈⠷⣦⣴⡾⢿⣿⡿⢿⣿⣋⣽⠶⢦⠙⢷⡀⠀⠀⠀⠀⠀⠀⠀         \",\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⡏⢀⡆⠈⠉⠁⡄⠈⡇⠘⢇⠀⢈⡆⠀⠀⠀⠀         \",\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡯⠀⠸⠁⠀⠀⠸⣧⡀⡇⠀⠈⠉⠉⠀⠀⠀⠀⠀         \",\n",
+    "                    \"⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣇⡴⠁⠀⠀⠀⠀⠙⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀          \"\n",
+    "            },\n",
+    "        };\n",
+    "    }\n",
+    "\n",
+    "    public void printPoem() {\n",
+    "        System.out.println();\n",
+    "        System.out.println(\"A story of a Monkey and Cthulhus\");\n",
+    "        int monkeyCount = monkeys.length;\n",
+    "        // Missing code\n",
+    "        for (int i = 1; i >= 1; i--)\n",
+    "        {\n",
+    "            //hint: missing code\n",
+    "            for (int row = 0; row < monkeyCount; row++) {\n",
+    "                for (int col = 0; col < monkeys[row].length; col++) {\n",
+    "                    System.out.print(monkeys[row][col] + \" \");\n",
+    "                }\n",
+    "                System.out.println();\n",
+    "            }\n",
+    "        }\n",
+    "            //hint: missing code, another for loop\n",
+    "        int cthulhuCount = cthulhus[0].length;\n",
+    "        for (int col1 = 0; col1 < cthulhuCount; col1++) {\n",
+    "            for (int row1 = 0; row1 < 1; row1++){\n",
+    "                System.out.print(cthulhus[row1][col1]);\n",
+    "            }\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "        // End of missing code\n",
+    "        System.out.println(\"0000000000000000000000000000000000\");\n",
+    "        System.out.println(\"             THE END              \");\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    public static void main(String[] args)  {\n",
+    "        new MonkeyLoop().printPoem();\n",
+    "    }\n",
+    "}\n",
+    "MonkeyLoop.main(null);"
    ]
   }
  ],
