--- a/_notebooks/2022-12-09-unit8-hw.ipynb
+++ b/_notebooks/2022-12-09-unit8-hw.ipynb
@@ -40,7 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a class for 2D array learning."
+    "Create a class for 2D array learning.\n",
+    "Create a method to initialize a 2D array with arbitrary values\n",
+    "Create a method to reverse the 2D array and print out the values\n",
+    "Create a method that asks for the input of a position and it returns the corresponding value\n",
+    "Create a method that multiplies each value in a row and then adds all the products together\n",
+    "Create a new object to test out each method in the main function"
    ]
   },
   {
