--- a/_notebooks/2022-12-09-unit8-hw.ipynb
+++ b/_notebooks/2022-12-09-unit8-hw.ipynb
@@ -23,7 +23,7 @@
     "# Notes\n",
     "- 2D arrays are essentially arrays of arrays, which can let us use them to create data structures like matrices, etc\n",
     "- 2D arrays can be initialized in 2 ways: \n",
-    "int[][] numbers1 = { {1,2,3,4},{5,6,7,8},{9,10,11,12},{13,14,15,16} };\n",
+    "int[][] numbers1 = (curly brace){1,2,3,4},{5,6,7,8},{9,10,11,12},{13,14,15,16}(curly brace); \n",
     "int[][] numbers2 = new int[4][3]; \n",
     "- To iterate through a 2D array, you have to use a for loop that first iterates through the rows then moves on to the next column and keeps iterating through the rows and so on until it's over\n",
     "- Nested for loops are needed to iterate through a 2D array since it has columns and rows\n",
