--- a/_notebooks/2022-12-09-unit8-hw.ipynb
+++ b/_notebooks/2022-12-09-unit8-hw.ipynb
@@ -40,22 +40,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a class for 2D array learning.\n",
-    "Create a method to initialize a 2D array with arbitrary values\n",
-    "Create a method to reverse the 2D array and print out the values\n",
-    "Create a method that asks for the input of a position and it returns the corresponding value\n",
-    "Create a method that multiplies each value in a row and then adds all the products together\n",
-    "Create a new object to test out each method in the main function"
+    "- Create a class for 2D array learning.\n",
+    "- Create a method to initialize a 2D array with arbitrary values\n",
+    "- Create a method to reverse the 2D array and print out the values\n",
+    "- Create a method that asks for the input of a position and it returns the corresponding value\n",
+    "- Create a method that multiplies each value in a row and then adds all the products together\n",
+    "- Create a new object to test out each method in the main function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -185,11 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -307,7 +299,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
