--- a/_notebooks/2022-12-12-unit9-hw.ipynb
+++ b/_notebooks/2022-12-12-unit9-hw.ipynb
@@ -40,74 +40,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        Argentina(\u001b[0m\u001b[1m\u001b[30m\u001b[41mwinningItAll\u001b[0m\u001b[1m\u001b[30m);\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static variable winningItAll cannot be referenced from a static context\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        \u001b[0m\u001b[1m\u001b[30m\u001b[41mArgentina\u001b[0m\u001b[1m\u001b[30m(winningItAll);\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static method Argentina(boolean) cannot be referenced from a static context\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        \u001b[0m\u001b[1m\u001b[30m\u001b[41mFrance\u001b[0m\u001b[1m\u001b[30m();\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static method France() cannot be referenced from a static context\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        \u001b[0m\u001b[1m\u001b[30m\u001b[41mMorocco\u001b[0m\u001b[1m\u001b[30m();\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static method Morocco() cannot be referenced from a static context\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        \u001b[0m\u001b[1m\u001b[30m\u001b[41mCroatia\u001b[0m\u001b[1m\u001b[30m();\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static method Croatia() cannot be referenced from a static context\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        \u001b[0m\u001b[1m\u001b[30m\u001b[41mSouthKorea\u001b[0m\u001b[1m\u001b[30m();\u001b[0m",
-      "\u001b[1m\u001b[31mnon-static method SouthKorea() cannot be referenced from a static context\u001b[0m",
-      ""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team name: France, REPL.$JShell$19B$France@557e3651\n",
+      "Team name: Argentina, REPL.$JShell$35$Argentina@5bb9d28e\n",
+      "Team name: Morocco, REPL.$JShell$36$Morocco@5f865d21\n",
+      "Team name: Croatia, REPL.$JShell$37$Croatia@1a84d8b5\n",
+      "Team name: South Korea, REPL.$JShell$38$SouthKorea@3e6ca90a\n"
      ]
     }
    ],
    "source": [
-    "public class worldCup {\n",
-    "    public String tournamentLocation;\n",
-    "    public int year;\n",
-    "    boolean stillPlaying;\n",
-    "    boolean winningItAll;\n",
+    "public class WorldCup {\n",
+    "    public int goals;\n",
+    "    public int wins;\n",
+    "    public int booleanWinningItAll;\n",
     "\n",
-    "    public void Argentina(boolean winningItAll) {\n",
-    "        this.winningItAll = winningItAll;\n",
-    "        winningItAll = true;\n",
-    "        System.out.println(\"Argentina is the best team still remaining. It is \" + winningItAll + \" that they are winning it all\");\n",
+    "    public void Team (int goals, int wins, int booleanWinningItAll) {\n",
+    "        this.goals = goals;\n",
+    "        this.wins = wins;\n",
+    "        this.booleanWinningItAll = booleanWinningItAll;\n",
     "    }\n",
-    "    public void France() {\n",
-    "        System.out.println(\"France is a very good team that is still remaining in the tournament\");\n",
-    "    }\n",
-    "    public void Morocco() {\n",
-    "        System.out.println(\"Morocco has had an incredible run to make it to the semi-finals\");\n",
-    "    }\n",
-    "    public void Croatia() {\n",
-    "        System.out.println(\"Croatia is a very good team that is still remaining in the tournament\");\n",
-    "    }\n",
-    "    public void SouthKorea() {\n",
-    "        System.out.println(\"South Korea is no longer in the tournament after losing to the previous favorites Brazil\");\n",
-    "    }\n",
-    "    \n",
-    "    public static void Main(String[] args) {\n",
-    "        Argentina(winningItAll);\n",
-    "        France();\n",
-    "        Morocco();\n",
-    "        Croatia();\n",
-    "        SouthKorea();\n",
+    "\n",
+    "    public String toString(){\n",
+    "        return \"Goals: \" + this.goals + \n",
+    "        \", Wins: \" + this.wins + \n",
+    "        \", Winning it all (in boolean value): \" + this.booleanWinningItAll;\n",
     "    }\n",
     "}\n",
-    "worldCup.Main(null);\n",
-    "// worldCup.Argentina(winningItAll);\n",
-    "// worldCup.France(null);\n",
-    "// worldCup.Morocco(null);\n",
-    "// worldCup.Croatia(null);\n",
-    "// worldCup.SouthKorea(null);"
+    "\n",
+    "public class France extends Team {\n",
+    "    public France (int goals, int wins, int booleanWinningItAll) {\n",
+    "        super(goals, wins, booleanWinningItAll);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Argentina extends Team {\n",
+    "    public Argentina (int goals, int wins, int booleanWinningItAll) {\n",
+    "        super(goals, wins, booleanWinningItAll);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Morocco extends Team {\n",
+    "    public Morocco (int goals, int wins, int booleanWinningItAll) {\n",
+    "        super(goals, wins, booleanWinningItAll);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Croatia extends Team {\n",
+    "    public Croatia (int goals, int wins, int booleanWinningItAll) {\n",
+    "        super(goals, wins, booleanWinningItAll);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SouthKorea extends Team {\n",
+    "    public SouthKorea (int goals, int wins, int booleanWinningItAll) {\n",
+    "        super(goals, wins, booleanWinningItAll);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Tester {\n",
+    "    public static void Main(String[] args) {\n",
+    "        France france = new France(11, 2, 1);\n",
+    "        System.out.println(\"Team name: France, \" + france);\n",
+    "\n",
+    "        Argentina argentina = new Argentina(12, 3, 0);\n",
+    "        System.out.println(\"Team name: Argentina, \" + argentina);\n",
+    "\n",
+    "        Morocco morocco = new Morocco(5, 2, 0);\n",
+    "        System.out.println(\"Team name: Morocco, \" + morocco);\n",
+    "\n",
+    "        Croatia croatia = new Croatia(6, 2, 0);\n",
+    "        System.out.println(\"Team name: Croatia, \" + croatia);\n",
+    "\n",
+    "        SouthKorea southkorea = new SouthKorea(1, 0, 0);\n",
+    "        System.out.println(\"Team name: South Korea, \" + southkorea);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Tester.Main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Add a getAge method in the Person super class\n",
+    "- Create a new subclass Student with additional members of your choice to personalize the - Student class\n",
+    "- Create a new subclass Teacher with additiona members of your choice\n",
+    "- Override the toString method using the @Override to print a Student and teacher object with new members\n",
+    "- Print the student and teacher."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person (Name: Albert, Birthday: 1990)\n",
+      "Student (Name: Richard, Birthday: 2005, Sport: cricket & badminton, GPA: 3.5, Grade: 12)\n",
+      "Teacher (Name: Mark, Birthday: 1980, Subject: Computer Science, Years of Experience: 10, Major: Computer Science)\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Person {\n",
+    "    protected String name;\n",
+    "    protected String birthday;\n",
+    " \n",
+    "    public Person (String name, String birthday){\n",
+    "       this.name = name;\n",
+    "       this.birthday = birthday;\n",
+    "    }\n",
+    " \n",
+    "    public String getName(){\n",
+    "       return name;\n",
+    "    }\n",
+    "\n",
+    "    public int getAge() {\n",
+    "         return 2022 - Integer.parseInt(birthday);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "         return \"Person (Name: \" + name + \", Birthday: \" + birthday + \")\";\n",
+    "    }\n",
+    " }\n",
+    " \n",
+    " public class Student extends Person {\n",
+    "    private int grade;\n",
+    "    private double gpa;\n",
+    "    private String sport;\n",
+    " \n",
+    "    public Student (String name, String birthday, int grade, double gpa, String sport) {\n",
+    "       super(name, birthday);\n",
+    "       this.grade = grade;\n",
+    "       this.gpa = gpa;\n",
+    "       this.sport = sport;\n",
+    "    }\n",
+    "\n",
+    "    // return gpa\n",
+    "    public double getGPA() {\n",
+    "        return gpa;\n",
+    "    }\n",
+    "\n",
+    "    public String sport() {\n",
+    "        return sport;\n",
+    "    }\n",
+    "\n",
+    "    // return grade\n",
+    "    public int getGrade(){\n",
+    "       return grade;\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "         return \"Student (Name: \" + name + \", Birthday: \" + birthday + \", Sport: \" + sport + \", GPA: \" + gpa + \", Grade: \" + grade + \")\";\n",
+    "    }\n",
+    " }\n",
+    "\n",
+    " public class Teacher extends Person {\n",
+    "      private String subject;\n",
+    "      private int yearsOfExperience;\n",
+    "      private String major;\n",
+    "   \n",
+    "      public Teacher (String name, String birthday, String subject, int yearsOfExperience, String major) {\n",
+    "         super(name, birthday);\n",
+    "         this.subject = subject;\n",
+    "         this.yearsOfExperience = yearsOfExperience;\n",
+    "         this.major = major;\n",
+    "      }\n",
+    "   \n",
+    "      // return subject\n",
+    "      public String getSubject() {\n",
+    "         return subject;\n",
+    "      }\n",
+    "   \n",
+    "      // return yearsOfExperience\n",
+    "      public int yearsOfExperience() {\n",
+    "         return yearsOfExperience;\n",
+    "      }\n",
+    "   \n",
+    "      // return major\n",
+    "      public String getMajor() {\n",
+    "         return major;\n",
+    "      }\n",
+    "\n",
+    "      @Override\n",
+    "      public String toString() {\n",
+    "            return \"Teacher (Name: \" + name + \", Birthday: \" + birthday + \", Subject: \" + subject + \", Years of Experience: \" + yearsOfExperience + \", Major: \" + major + \")\";\n",
+    "      }\n",
+    " }\n",
+    "\n",
+    "Person Albert = new Person(\"Albert\", \"1990\");\n",
+    "System.out.println(Albert.toString());\n",
+    "\n",
+    "Person Richard = new Student(\"Richard\", \"2005\", 12, 3.5, \"cricket & badminton\");\n",
+    "System.out.println(Richard.toString());\n",
+    "\n",
+    "Person Mark = new Teacher(\"Mark\", \"1980\", \"Computer Science\", 10, \"Computer Science\");\n",
+    "System.out.println(Mark.toString());"
    ]
   }
  ],
@@ -121,7 +271,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
