--- a/_notebooks/2022-12-12-unit9-hw.ipynb
+++ b/_notebooks/2022-12-12-unit9-hw.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -51,11 +51,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team name: France, REPL.$JShell$19B$France@557e3651\n",
-      "Team name: Argentina, REPL.$JShell$35$Argentina@5bb9d28e\n",
-      "Team name: Morocco, REPL.$JShell$36$Morocco@5f865d21\n",
-      "Team name: Croatia, REPL.$JShell$37$Croatia@1a84d8b5\n",
-      "Team name: South Korea, REPL.$JShell$38$SouthKorea@3e6ca90a\n"
+      "Team name: France, Goals: 11, Wins: 2, Winning it all (in boolean value): 1\n",
+      "Team name: Argentina, Goals: 12, Wins: 3, Winning it all (in boolean value): 0\n",
+      "Team name: Morocco, Goals: 5, Wins: 2, Winning it all (in boolean value): 0\n",
+      "Team name: Croatia, Goals: 6, Wins: 2, Winning it all (in boolean value): 0\n",
+      "Team name: South Korea, Goals: 1, Wins: 0, Winning it all (in boolean value): 0\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
     "    public int wins;\n",
     "    public int booleanWinningItAll;\n",
     "\n",
-    "    public void Team (int goals, int wins, int booleanWinningItAll) {\n",
+    "    public WorldCup (int goals, int wins, int booleanWinningItAll) {\n",
     "        this.goals = goals;\n",
     "        this.wins = wins;\n",
     "        this.booleanWinningItAll = booleanWinningItAll;\n",
@@ -78,31 +78,31 @@
     "    }\n",
     "}\n",
     "\n",
-    "public class France extends Team {\n",
+    "public class France extends WorldCup {\n",
     "    public France (int goals, int wins, int booleanWinningItAll) {\n",
     "        super(goals, wins, booleanWinningItAll);\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Argentina extends Team {\n",
+    "public class Argentina extends WorldCup {\n",
     "    public Argentina (int goals, int wins, int booleanWinningItAll) {\n",
     "        super(goals, wins, booleanWinningItAll);\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Morocco extends Team {\n",
+    "public class Morocco extends WorldCup {\n",
     "    public Morocco (int goals, int wins, int booleanWinningItAll) {\n",
     "        super(goals, wins, booleanWinningItAll);\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Croatia extends Team {\n",
+    "public class Croatia extends WorldCup {\n",
     "    public Croatia (int goals, int wins, int booleanWinningItAll) {\n",
     "        super(goals, wins, booleanWinningItAll);\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class SouthKorea extends Team {\n",
+    "public class SouthKorea extends WorldCup {\n",
     "    public SouthKorea (int goals, int wins, int booleanWinningItAll) {\n",
     "        super(goals, wins, booleanWinningItAll);\n",
     "    }\n",
@@ -128,136 +128,6 @@
     "}\n",
     "\n",
     "Tester.Main(null);"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Add a getAge method in the Person super class\n",
-    "- Create a new subclass Student with additional members of your choice to personalize the - Student class\n",
-    "- Create a new subclass Teacher with additiona members of your choice\n",
-    "- Override the toString method using the @Override to print a Student and teacher object with new members\n",
-    "- Print the student and teacher."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Person (Name: Albert, Birthday: 1990)\n",
-      "Student (Name: Richard, Birthday: 2005, Sport: cricket & badminton, GPA: 3.5, Grade: 12)\n",
-      "Teacher (Name: Mark, Birthday: 1980, Subject: Computer Science, Years of Experience: 10, Major: Computer Science)\n"
-     ]
-    }
-   ],
-   "source": [
-    "public class Person {\n",
-    "    protected String name;\n",
-    "    protected String birthday;\n",
-    " \n",
-    "    public Person (String name, String birthday){\n",
-    "       this.name = name;\n",
-    "       this.birthday = birthday;\n",
-    "    }\n",
-    " \n",
-    "    public String getName(){\n",
-    "       return name;\n",
-    "    }\n",
-    "\n",
-    "    public int getAge() {\n",
-    "         return 2022 - Integer.parseInt(birthday);\n",
-    "    }\n",
-    "\n",
-    "    @Override\n",
-    "    public String toString() {\n",
-    "         return \"Person (Name: \" + name + \", Birthday: \" + birthday + \")\";\n",
-    "    }\n",
-    " }\n",
-    " \n",
-    " public class Student extends Person {\n",
-    "    private int grade;\n",
-    "    private double gpa;\n",
-    "    private String sport;\n",
-    " \n",
-    "    public Student (String name, String birthday, int grade, double gpa, String sport) {\n",
-    "       super(name, birthday);\n",
-    "       this.grade = grade;\n",
-    "       this.gpa = gpa;\n",
-    "       this.sport = sport;\n",
-    "    }\n",
-    "\n",
-    "    // return gpa\n",
-    "    public double getGPA() {\n",
-    "        return gpa;\n",
-    "    }\n",
-    "\n",
-    "    public String sport() {\n",
-    "        return sport;\n",
-    "    }\n",
-    "\n",
-    "    // return grade\n",
-    "    public int getGrade(){\n",
-    "       return grade;\n",
-    "    }\n",
-    "\n",
-    "    @Override\n",
-    "    public String toString() {\n",
-    "         return \"Student (Name: \" + name + \", Birthday: \" + birthday + \", Sport: \" + sport + \", GPA: \" + gpa + \", Grade: \" + grade + \")\";\n",
-    "    }\n",
-    " }\n",
-    "\n",
-    " public class Teacher extends Person {\n",
-    "      private String subject;\n",
-    "      private int yearsOfExperience;\n",
-    "      private String major;\n",
-    "   \n",
-    "      public Teacher (String name, String birthday, String subject, int yearsOfExperience, String major) {\n",
-    "         super(name, birthday);\n",
-    "         this.subject = subject;\n",
-    "         this.yearsOfExperience = yearsOfExperience;\n",
-    "         this.major = major;\n",
-    "      }\n",
-    "   \n",
-    "      // return subject\n",
-    "      public String getSubject() {\n",
-    "         return subject;\n",
-    "      }\n",
-    "   \n",
-    "      // return yearsOfExperience\n",
-    "      public int yearsOfExperience() {\n",
-    "         return yearsOfExperience;\n",
-    "      }\n",
-    "   \n",
-    "      // return major\n",
-    "      public String getMajor() {\n",
-    "         return major;\n",
-    "      }\n",
-    "\n",
-    "      @Override\n",
-    "      public String toString() {\n",
-    "            return \"Teacher (Name: \" + name + \", Birthday: \" + birthday + \", Subject: \" + subject + \", Years of Experience: \" + yearsOfExperience + \", Major: \" + major + \")\";\n",
-    "      }\n",
-    " }\n",
-    "\n",
-    "Person Albert = new Person(\"Albert\", \"1990\");\n",
-    "System.out.println(Albert.toString());\n",
-    "\n",
-    "Person Richard = new Student(\"Richard\", \"2005\", 12, 3.5, \"cricket & badminton\");\n",
-    "System.out.println(Richard.toString());\n",
-    "\n",
-    "Person Mark = new Teacher(\"Mark\", \"1980\", \"Computer Science\", 10, \"Computer Science\");\n",
-    "System.out.println(Mark.toString());"
    ]
   }
  ],
