--- a/_notebooks/2022-12-12-unit9-hw.ipynb
+++ b/_notebooks/2022-12-12-unit9-hw.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -128,6 +128,127 @@
     "}\n",
     "\n",
     "Tester.Main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person (Name: Albert, Birthday: 1944)\n",
+      "Student (Name: Richard, Birthday: 2005, Sport: cricket & bandminton, GPA: 3.5, Grade: 12)\n",
+      "Teacher (Name: Mark, birthday: 1984, Subject: Computer Science, years of experience: 23, Major: Computer science)\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Person {\n",
+    "    protected String name;\n",
+    "    protected String birthday;\n",
+    " \n",
+    "    public Person (String name, String birthday){\n",
+    "       this.name = name;\n",
+    "       this.birthday = birthday;\n",
+    "    }\n",
+    " \n",
+    "    public String getName(){\n",
+    "       return name;\n",
+    "    }\n",
+    "\n",
+    "    public int getAge() {\n",
+    "         return 2022 - Integer.parseInt(birthday);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "         return \"Person (Name: \" + name + \", Birthday: \" + birthday + \")\";\n",
+    "    }\n",
+    " }\n",
+    " \n",
+    " public class Student extends Person {\n",
+    "    private int grade;\n",
+    "    private double gpa;\n",
+    "    private String sport;\n",
+    " \n",
+    "    public Student (String name, String birthday, int grade, double gpa, String sport) {\n",
+    "       super(name, birthday);\n",
+    "       this.grade = grade;\n",
+    "       this.gpa = gpa;\n",
+    "       this.sport = sport;\n",
+    "    }\n",
+    "\n",
+    "    // return gpa\n",
+    "    public double getGPA() {\n",
+    "        return gpa;\n",
+    "    }\n",
+    "\n",
+    "    public String sport() {\n",
+    "        return sport;\n",
+    "    }\n",
+    "\n",
+    "    // return grade\n",
+    "    public int getGrade(){\n",
+    "       return grade;\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "         return \"Student (Name: \" + name + \", Birthday: \" + birthday + \", Sport: \" + sport + \", GPA: \" + gpa + \", Grade: \" + grade + \")\";\n",
+    "    }\n",
+    " }\n",
+    "\n",
+    " public class Teacher extends Person {\n",
+    "      private String subject;\n",
+    "      private int yearsOfExperience;\n",
+    "      private String major;\n",
+    "   \n",
+    "      public Teacher (String name, String birthday, String subject, int yearsOfExperience, String major) {\n",
+    "         super(name, birthday);\n",
+    "         this.subject = subject;\n",
+    "         this.yearsOfExperience = yearsOfExperience;\n",
+    "         this.major = major;\n",
+    "      }\n",
+    "   \n",
+    "      // return subject\n",
+    "      public String getSubject() {\n",
+    "         return subject;\n",
+    "      }\n",
+    "   \n",
+    "      // return yearsOfExperience\n",
+    "      public int getYearsOfExperience() {\n",
+    "         return yearsOfExperience;\n",
+    "      }\n",
+    "   \n",
+    "      // return major\n",
+    "      public String getMajor() {\n",
+    "         return major;\n",
+    "      }\n",
+    "\n",
+    "      @Override\n",
+    "      public String toString() {\n",
+    "            return \"Teacher (Name: \" + name + \", birthday: \" + birthday + \", Subject: \" + subject + \", years of experience: \" + yearsOfExperience + \", Major: \" + major + \")\";\n",
+    "      }\n",
+    " }\n",
+    "\n",
+    "Person Albert = new Person(\"Albert\", \"1944\");\n",
+    "System.out.println(Albert.toString());\n",
+    "Person Richard = new Student(\"Richard\", \"2005\", 12, 3.5, \"cricket & bandminton\");\n",
+    "System.out.println(Richard.toString());\n",
+    "Person Mark = new Teacher(\"Mark\", \"1984\", \"Computer Science\", 23, \"Computer science\");\n",
+    "System.out.println(Mark.toString());"
    ]
   }
  ],
