unit 6 array notes

--- a/_notebooks/2022-11-09-unit6-hw.ipynb
+++ b/_notebooks/2022-11-09-unit6-hw.ipynb
@@ -15,17 +15,96 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Notes\n",
-    "- a"
+    "- An array: a type of data structure that contains a collection of data\n",
+    "- In Java, arrays and ArrayLists are different data structures!  Don’t confuse them!\n",
+    "- The data in a Java array can be primitive or referenced\n",
+    "- Primitive data types contain a single variable type (eg. int, char, float)\n",
+    "- Referenced data types containing several variables of different types (eg. String, Array, and classes)\n",
+    "- Note lower vs. upper case!\n",
+    "Parts of an array:\n",
+    "- Element → one value in an array\n",
+    "- Index → the position of the value in array (most languages, including Java, use 0 indexing)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Different ways to declare array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// int [] numbers = new[10];\n",
+    "\n",
+    "// Sometimes it’s good to use a constant instead of a “magic number”\n",
+    "final int LENGTH = 10;\n",
+    "int[] numbers = new int[LENGTH];\n",
+    "\n",
+    "// The length does not need to be constant in an array\n",
+    "int length = in.nextInt();\n",
+    "double[] data = new double[length];\n",
+    "\n",
+    "// An int array with 5 initial values\n",
+    "int[squares] = {0, 1, 4, 9, 16};\n",
+    "\n",
+    "// An array of 4 Strings\n",
+    "String[] team1 = {“Jun\", \"Yash\", \"Aidan\", \"Rithwikh”};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Uninitialized and Unfilled Arrays\n",
+    "- When you allocate, or assign a single array variable, but not the whole array\n",
+    "- Array variables work exactly like object variables\n",
+    "- They are only references to the actual array, we have to use the new operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "/*\n",
+    " * values[] is not initialized\n",
+    " */\n",
+    "double[] values;\n",
+    "Values[0] = 2.95;\n",
+    "\n",
+    "// Correction\n",
+    "double[] values = new double[10];\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -100,7 +179,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
