--- a/_notebooks/2022-12-13-unit10-hw.ipynb
+++ b/_notebooks/2022-12-13-unit10-hw.ipynb
@@ -35,6 +35,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Example of Reverse Binary Search with Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index of target: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class recursion{\n",
+    "    public static int recursionBinarySearch(int[] array, int first, int last, int target){\n",
+    "        int midpoint;\n",
+    "\n",
+    "        //if the first number is greater than the last, the target number is not in the list\n",
+    "        if (first > last){\n",
+    "            System.out.println(-1);\n",
+    "            return -1;\n",
+    "        }\n",
+    "        else{\n",
+    "            midpoint = (first+last)/2;\n",
+    "\n",
+    "            //take the upper bound if number is greater than midpoint\n",
+    "            if (array[midpoint] < target){\n",
+    "                return recursionBinarySearch(array, midpoint+1, last, target);\n",
+    "            }\n",
+    "\n",
+    "            // take the lower bound if the number is lesser than midpoint\n",
+    "            if (array[midpoint] > target){\n",
+    "                return recursionBinarySearch(array, first,midpoint-1, target);\n",
+    "            }\n",
+    "        System.out.println(\"index of target: \" + midpoint);\n",
+    "        return midpoint;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args){\n",
+    "        // test array in main\n",
+    "        int[] test_array = new int[]{ 0,2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40 };\n",
+    "        recursion.recursionBinarySearch(test_array, 0, test_array.length, 24);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "recursion.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binary Tree Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class example{\n",
+    "    static int foo(int n) {\n",
+    "\n",
+    "        if (n < 0){\n",
+    "            return 1;\n",
+    "        }\n",
+    "        else{\n",
+    "            return foo(n-2) + foo(n-1);\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String args[]){\n",
+    "        System.out.println(foo(3));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "example.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Example of Recursive Loop with Fibonacci"
    ]
   },
