--- a/_notebooks/2022-12-09-unit8-hw.ipynb
+++ b/_notebooks/2022-12-09-unit8-hw.ipynb
@@ -40,6 +40,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Creating A 2D Array\n",
+    "- The first step is to initialize the array. To do this, specify the type, followed by \"[][]\", followed by the name of the 2D array. Examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int[][] numbers;\n",
+    "String[][] names;\n",
+    "char[][] letters;\n",
+    "float[][] floats;\n",
+    "double[][] doubles;\n",
+    "Object[][] objects;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initializing a 2D Array\n",
+    "- Then you must give it a value, by initializing the 2D array. There are two ways to initialize a 2D array. Method 1: You can initialize the array by giving it values Method 2: You can also initialize it by giving it the size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int[][] numbers1 = {{1,2,3,4},{5,6,7,8},{9,10,11,12},{13,14,15,16}};//method 1:\n",
+    "int[][] numbers2 = new int[4][3]; //method 2: Creates array with four rows and 3 columns \n",
+    "String[][] names1 = {{\"John\",\"James\",\"Jay\"},{\"Melissa\",\"May\",\"Maggie\"},{\"Bob\",\"Burt\",\"Billy\"}}; //method 1\n",
+    "String[][] names2 = new String[2][2]; //method2: Creates array with 2 rows and 2 columns\n",
+    "char[][] letters1 = {{'a','b','c'},{'d','e','f','g','h'}}; //method 1\n",
+    "char[][] letters2 = new char[2][3]; //method 2: Creates array with 2 rows and 3 columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iteration\n",
+    "- To iterate through a normal array, you would could use a for loop, as demonstrated below to print the alphabet. You would iterate through the first array(row), then use another for loop nested within the first that iterates through the second arrays(columns)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 0 - =  \n",
+      "q w e r t y u i o p [ ] \\  \n",
+      "a s d f g h j k l  \n",
+      "z x c v b n m , . /  \n"
+     ]
+    }
+   ],
+   "source": [
+    "String[][] alphabet = {{\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"0\", \"-\", \"=\"},\n",
+    "{\"q\", \"w\", \"e\", \"r\", \"t\", \"y\", \"u\", \"i\", \"o\", \"p\", \"[\", \"]\", \"\\\\\"},\n",
+    "{\"a\", \"s\", \"d\", \"f\", \"g\", \"h\", \"j\", \"k\", \"l\"},\n",
+    "{\"z\", \"x\", \"c\", \"v\", \"b\", \"n\", \"m\", \",\", \".\", \"/\"}};\n",
+    "for(int i = 0;i<alphabet.length;i++){ //i IS COLUMN\n",
+    "    for(int j = 0; j < alphabet[i].length;j++){ //nested for loops\n",
+    "        System.out.print(alphabet[i][j]+\" \");\n",
+    "    }\n",
+    "    System.out.println(\" \");\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accessing and Changing Elements of 2D Arrays\n",
+    "- You can change elements or access elements in 2D arrays by using the indexes. For example, to access the 2nd row, and 3 column, use [1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4  \n",
+      "9 16  \n"
+     ]
+    }
+   ],
+   "source": [
+    "int[][] numbers = new int[2][2]; //method 2: Creates array with two rows and two columns\n",
+    "numbers[0][0] = 1;\n",
+    "numbers[0][1] = 4;\n",
+    "numbers[1][0] = 9;\n",
+    "numbers[1][1] = 16;\n",
+    "for(int i = 0;i<numbers.length;i++){\n",
+    "    for(int j = 0; j < numbers[i].length;j++){ //nested for loops\n",
+    "        System.out.print(numbers[i][j]+\" \");\n",
+    "    }\n",
+    "    System.out.println(\" \");\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Create a class for 2D array learning.\n",
     "- Create a method to initialize a 2D array with arbitrary values\n",
     "- Create a method to reverse the 2D array and print out the values\n",
@@ -51,7 +188,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -181,7 +322,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -299,7 +444,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
