--- a/_notebooks/2023-01-22-66mcq.ipynb
+++ b/_notebooks/2023-01-22-66mcq.ipynb
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [quiz]\n",
-    "- image: images/MonaLisa.png"
+    "- image: my_icons/66mcq.PNG"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "# Developing Algorithms Using Strings\n",
-    "![](myicons/q17v2.PNG)"
+    "![](my_icons/q17v2.PNG)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "# Traversing 2D Arrays\n",
-    "![](myicons/q17v2.PNG)"
+    "![](my_icons/q17v2.PNG)"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "source": [
     "# Traversing 2D Arrays\n",
-    "![](myicons/q17v2.PNG)"
+    "![](my_icons/q17v2.PNG)"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "source": [
     "# Equivalent Boolean Expressions\n",
-    "![](myicons/q31v2.PNG)"
+    "![](my_icons/q31v2.PNG)"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "metadata": {},
    "source": [
     "# If-else Statements\n",
-    "![](myicons/q37.PNG)"
+    "![](my_icons/q37.PNG)"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "metadata": {},
    "source": [
     "# Array Creation and Access\n",
-    "![](myicons/q40.PNG)"
+    "![](my_icons/q40.PNG)"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "source": [
     "# Mutator Methods\n",
-    "![](myicons/q52.PNG)"
+    "![](my_icons/q52.PNG)"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "source": [
     "# Recursion\n",
-    "![](myicons/q53.PNG)"
+    "![](my_icons/q53.PNG)"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "source": [
     "# Recursion\n",
-    "![](myicons/q59.PNG)"
+    "![](my_icons/q59.PNG)"
    ]
   },
   {
