--- a/_notebooks/2023-01-22-66mcq.ipynb
+++ b/_notebooks/2023-01-22-66mcq.ipynb
@@ -34,7 +34,8 @@
     "- Also missed 2 on De'Morgan's law, but they were simple mistakes rather than something I need to study more\n",
     "- Need to look over Java methods like .indexOf() and .compareTo()\n",
     "- Had to take a couple breaks \n",
-    "- Make sure concentration isn't broken after focusing for a handful of questions"
+    "- Make sure concentration isn't broken after focusing for a handful of questions\n",
+    "- After frequent breaks, this probably took me north of 3 hours to complete this. Timing will be a crucial focus moving forward"
    ]
   },
   {
