--- a/_notebooks/2023-01-22-66mcq.ipynb
+++ b/_notebooks/2023-01-22-66mcq.ipynb
@@ -30,9 +30,9 @@
    "metadata": {},
    "source": [
     "# Reflection \n",
-    "- Most missed questions were about 2D Arrays and Recursion; Need to look over these more\n",
+    "- Most missed questions were about 2D Arrays and Recursion; need to look over these more\n",
     "- Also missed 2 on De'Morgan's law, but they were simple mistakes rather than something I need to study more\n",
-    "- Need to look over Java methods like .indexOf() and .compareTo()\n",
+    "- Need to look over Java methods like .indexOf() and .compareTo(). Also some of the ArrayList methods too\n",
     "- Had to take a couple breaks \n",
     "- Make sure concentration isn't broken after focusing for a handful of questions\n",
     "- After frequent breaks, this probably took me north of 3 hours to complete this. Timing will be a crucial focus moving forward"
